--- a/package.json
+++ b/package.json
@@ -22,8 +22,12 @@
   },
   "dependencies": {
     "chess.js": "0.9.3",
+    "graphql": "0.4.18",
+    "graphql-relay": "0.3.6",
     "immutable": "3.7.6",
-    "react": "^0.14.6",
-    "react-dom": "^0.14.6"
+    "react": "0.14.6",
+    "react-dom": "0.14.6",
+    "react-relay": "0.7.3",
+    "relay-local-schema": "0.3.2"
   }
 }
