--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "react-chess",
+  "license": "MIT",
   "version": "0.0.0",
-  "description": "Boilerplate for ReactJS project with hot code reloading",
+  "author": "Brian Kim <briankimpossible@gmail.com>",
   "scripts": {
     "start": "node server.js",
     "lint": "eslint src"
   },
-  "author": "Brian Kim <briankimpossible@gmail.com>",
   "devDependencies": {
     "babel-core": "^6.0.20",
     "babel-eslint": "^4.1.3",
@@ -16,6 +16,8 @@
     "babel-preset-stage-0": "^6.0.15",
     "eslint": "^1.10.3",
     "eslint-plugin-react": "^3.6.2",
+    "file-loader": "^0.8.5",
+    "raw-loader": "^0.5.1",
     "react-hot-loader": "^1.3.0",
     "webpack": "^1.12.2",
     "webpack-dev-server": "^1.12.1"
@@ -26,8 +28,6 @@
     "graphql-relay": "0.3.6",
     "immutable": "3.7.6",
     "react": "15.0.0-rc.2",
-    "react-dom": "15.0.0-rc.2",
-    "react-relay": "0.7.3",
-    "relay-local-schema": "0.3.2"
+    "react-dom": "15.0.0-rc.2"
   }
 }
