--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "file-loader": "^0.8.5",
     "raw-loader": "^0.5.1",
     "react-hot-loader": "^1.3.0",
+    "url-loader": "^0.5.7",
     "webpack": "^1.12.2",
     "webpack-dev-server": "^1.12.1"
   },
