--- a/package.json
+++ b/package.json
@@ -4,18 +4,14 @@
   "version": "0.0.0",
   "author": "Brian Kim <briankimpossible@gmail.com>",
   "scripts": {
-    "start": "node server.js",
-    "lint": "eslint src"
+    "start": "node server.js"
   },
   "devDependencies": {
     "babel-core": "^6.0.20",
-    "babel-eslint": "^4.1.3",
     "babel-loader": "^6.0.1",
     "babel-preset-es2015": "^6.0.15",
     "babel-preset-react": "^6.0.15",
     "babel-preset-stage-0": "^6.0.15",
-    "eslint": "^1.10.3",
-    "eslint-plugin-react": "^3.6.2",
     "file-loader": "^0.8.5",
     "raw-loader": "^0.5.1",
     "react-hot-loader": "^1.3.0",
