--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
   "dependencies": {
     "chess.js": "0.9.3",
     "graphql": "0.4.18",
-    "graphql-relay": "0.3.6",
     "immutable": "3.7.6",
+    "lodash.debounce": "4.0.3",
     "react": "15.0.0-rc.2",
     "react-dom": "15.0.0-rc.2"
   }
