--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "graphql": "0.4.18",
     "immutable": "3.7.6",
     "lodash.debounce": "4.0.3",
+    "ohm-js": "0.9.0",
     "react": "15.0.0-rc.2",
     "react-dom": "15.0.0-rc.2"
   }
