--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "lodash.debounce": "4.0.3",
     "ohm-js": "0.9.0",
     "react": "15.0.0-rc.2",
-    "react-dom": "15.0.0-rc.2"
+    "react-dom": "15.0.0-rc.2",
+    "react-motion": "0.4.2"
   }
 }
