--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
   "devDependencies": {
     "babel-core": "^6.0.20",
     "babel-loader": "^6.0.1",
+    "babel-plugin-transform-async-to-generator": "6.7.4",
+    "babel-plugin-transform-runtime": "^6.6.0",
+    "babel-polyfill": "6.7.4",
     "babel-preset-es2015": "^6.0.15",
     "babel-preset-react": "^6.0.15",
     "babel-preset-stage-0": "^6.0.15",
+    "babel-register": "6.7.2",
     "file-loader": "^0.8.5",
+    "nodemon": "1.9.1",
     "raw-loader": "^0.5.1",
     "react-hot-loader": "^1.3.0",
     "url-loader": "^0.5.7",
@@ -21,7 +26,9 @@
   },
   "dependencies": {
     "chess.js": "0.9.3",
+    "express": "4.13.4",
     "graphql": "0.4.18",
+    "html-webpack-plugin": "2.15.0",
     "immutable": "3.7.6",
     "lodash.debounce": "4.0.3",
     "ohm-js": "0.9.0",
