--- a/package.json
+++ b/package.json
@@ -16,15 +16,20 @@
     "babel-preset-react": "^6.0.15",
     "babel-preset-stage-0": "^6.0.15",
     "babel-register": "6.7.2",
+    "css-loader": "0.23.1",
     "file-loader": "^0.8.5",
     "nodemon": "1.9.1",
     "raw-loader": "^0.5.1",
     "react-hot-loader": "^1.3.0",
+    "style-loader": "0.13.1",
     "url-loader": "^0.5.7",
     "webpack": "^1.12.2",
-    "webpack-dev-server": "^1.12.1"
+    "webpack-dev-middleware": "1.6.1",
+    "webpack-dev-server": "^1.12.1",
+    "webpack-hot-middleware": "2.10.0"
   },
   "dependencies": {
+    "babel-cli": "6.7.5",
     "chess.js": "0.9.3",
     "express": "4.13.4",
     "graphql": "0.4.18",
