--- a/package.json
+++ b/package.json
@@ -7,38 +7,38 @@
     "start": "node server.js"
   },
   "devDependencies": {
-    "babel-core": "^6.0.20",
-    "babel-loader": "^6.0.1",
-    "babel-plugin-transform-async-to-generator": "6.7.4",
-    "babel-plugin-transform-runtime": "^6.6.0",
+    "babel-cli": "6.7.5",
+    "babel-core": "6.7.5",
+    "babel-loader": "6.2.4",
     "babel-polyfill": "6.7.4",
-    "babel-preset-es2015": "^6.0.15",
-    "babel-preset-react": "^6.0.15",
-    "babel-preset-stage-0": "^6.0.15",
+    "babel-preset-es2015": "6.6.0",
+    "babel-preset-react": "6.5.0",
     "babel-register": "6.7.2",
     "css-loader": "0.23.1",
-    "file-loader": "^0.8.5",
+    "extract-text-webpack-plugin": "1.0.1",
+    "file-loader": "0.8.5",
+    "html-webpack-plugin": "2.15.0",
     "nodemon": "1.9.1",
-    "raw-loader": "^0.5.1",
-    "react-hot-loader": "^1.3.0",
+    "raw-loader": "0.5.1",
+    "react-hot-loader": "1.3.0",
     "style-loader": "0.13.1",
-    "url-loader": "^0.5.7",
-    "webpack": "^1.12.2",
+    "url-loader": "0.5.7",
+    "webpack": "1.13.0",
     "webpack-dev-middleware": "1.6.1",
-    "webpack-dev-server": "^1.12.1",
+    "webpack-dev-server": "1.14.1",
     "webpack-hot-middleware": "2.10.0"
   },
   "dependencies": {
-    "babel-cli": "6.7.5",
     "chess.js": "0.9.3",
     "express": "4.13.4",
     "graphql": "0.4.18",
-    "html-webpack-plugin": "2.15.0",
     "immutable": "3.7.6",
     "lodash.debounce": "4.0.3",
     "ohm-js": "0.9.0",
     "react": "15.0.0-rc.2",
     "react-dom": "15.0.0-rc.2",
-    "react-motion": "0.4.2"
+    "react-motion": "0.4.2",
+    "rx": "4.1.0",
+    "rx-node": "1.0.2"
   }
 }
