--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "babel-polyfill": "6.7.4",
     "babel-preset-es2015": "6.6.0",
     "babel-preset-react": "6.5.0",
+    "babel-preset-stage-1": "6.5.0",
     "babel-register": "6.7.2",
     "css-loader": "0.23.1",
     "extract-text-webpack-plugin": "1.0.1",
