--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "version": "0.0.0",
   "author": "Brian Kim <briankimpossible@gmail.com>",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "test": "karma start karma.config.js"
   },
   "devDependencies": {
     "babel-cli": "6.7.5",
@@ -19,6 +20,10 @@
     "extract-text-webpack-plugin": "1.0.1",
     "file-loader": "0.8.5",
     "html-webpack-plugin": "2.15.0",
+    "karma": "0.13.22",
+    "karma-chrome-launcher": "0.2.3",
+    "karma-jasmine": "0.3.8",
+    "karma-webpack": "1.7.0",
     "nodemon": "1.9.1",
     "raw-loader": "0.5.1",
     "react-hot-loader": "1.3.0",
