--- a/package.json
+++ b/package.json
@@ -41,10 +41,12 @@
     "graphql": "0.4.18",
     "immutable": "3.7.6",
     "lodash.debounce": "4.0.3",
+    "mkdirp": "0.5.1",
     "ohm-js": "0.9.0",
     "react": "15.0.0-rc.2",
     "react-dom": "15.0.0-rc.2",
     "react-motion": "0.4.2",
+    "rimraf": "2.5.2",
     "rx": "4.1.0",
     "rx-node": "1.0.2"
   }
