--- a/package.json
+++ b/package.json
@@ -8,14 +8,12 @@
     "test": "karma start karma.config.js"
   },
   "devDependencies": {
-    "babel-cli": "6.7.5",
-    "babel-core": "6.7.5",
     "babel-loader": "6.2.4",
-    "babel-polyfill": "6.7.4",
+    "babel-plugin-transform-runtime": "6.8.0",
     "babel-preset-es2015": "6.6.0",
     "babel-preset-react": "6.5.0",
-    "babel-preset-stage-1": "6.5.0",
-    "babel-register": "6.7.2",
+    "babel-preset-stage-2": "6.5.0",
+    "babel-register": "6.8.0",
     "css-loader": "0.23.1",
     "extract-text-webpack-plugin": "1.0.1",
     "file-loader": "0.8.5",
@@ -25,7 +23,7 @@
     "karma-jasmine": "0.3.8",
     "karma-sourcemap-loader": "0.3.7",
     "karma-webpack": "1.7.0",
-    "nodemon": "1.9.1",
+    "nodemon": "1.9.2",
     "raw-loader": "0.5.1",
     "react-hot-loader": "1.3.0",
     "style-loader": "0.13.1",
@@ -36,6 +34,7 @@
     "webpack-hot-middleware": "2.10.0"
   },
   "dependencies": {
+    "babel-runtime": "6.6.1",
     "chess.js": "0.9.3",
     "express": "4.13.4",
     "graphql": "0.4.18",
