prepare to mess with spfjs

--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-motion": "0.4.2",
     "rimraf": "2.5.2",
     "rx": "4.1.0",
-    "rx-node": "1.0.2"
+    "rx-node": "1.0.2",
+    "spf": "2.3.2"
   }
 }
