--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "rimraf": "2.5.2",
     "rx": "4.1.0",
     "rx-node": "1.0.2",
+    "source-map-support": "0.4.0",
     "spf": "2.3.2",
     "webpack-node-externals": "1.2.0"
   }
