--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
   "version": "0.0.0",
   "author": "Brian Kim et al.",
   "scripts": {
-    "start": "node server.js",
     "test": "echo \"hahahaa you fucking goof there are no tests psych 😘 love\""
   },
-  "devDependencies": {
+  "dependencies": {
     "babel-loader": "6.2.4",
     "babel-plugin-transform-runtime": "6.8.0",
     "babel-preset-es2015": "6.6.0",
@@ -18,38 +17,21 @@
     "extract-text-webpack-plugin": "1.0.1",
     "file-loader": "0.8.5",
     "html-webpack-plugin": "2.15.0",
-    "karma": "0.13.22",
-    "karma-chrome-launcher": "0.2.3",
-    "karma-jasmine": "0.3.8",
-    "karma-sourcemap-loader": "0.3.7",
-    "karma-webpack": "1.7.0",
     "nodemon": "1.9.2",
     "raw-loader": "0.5.1",
     "react-hot-loader": "1.3.0",
     "style-loader": "0.13.1",
     "url-loader": "0.5.7",
+    "babel-runtime": "6.6.1",
+    "immutable": "3.7.6",
+    "mkdirp": "0.5.1",
+    "react": "15.1.0",
+    "react-dom": "15.1.0",
+    "source-map-support": "0.4.0",
     "webpack": "1.13.0",
     "webpack-dev-middleware": "1.6.1",
     "webpack-dev-server": "1.14.1",
+    "webpack-node-externals": "1.2.0",
     "webpack-hot-middleware": "2.10.0"
-  },
-  "dependencies": {
-    "babel-runtime": "6.6.1",
-    "chess.js": "0.9.3",
-    "express": "4.13.4",
-    "graphql": "0.4.18",
-    "immutable": "3.7.6",
-    "lodash.debounce": "4.0.3",
-    "mkdirp": "0.5.1",
-    "ohm-js": "0.9.0",
-    "react": "15.0.0-rc.2",
-    "react-dom": "15.0.0-rc.2",
-    "react-motion": "0.4.2",
-    "rimraf": "2.5.2",
-    "rx": "4.1.0",
-    "rx-node": "1.0.2",
-    "source-map-support": "0.4.0",
-    "spf": "2.3.2",
-    "webpack-node-externals": "1.2.0"
   }
 }
