--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "15.1.0",
     "react-dom": "15.1.0",
     "react-hot-loader": "1.3.0",
+    "rimraf": "2.5.2",
     "source-map-support": "0.4.0",
     "style-loader": "0.13.1",
     "url-loader": "0.5.7",
