--- a/package.json
+++ b/package.json
@@ -7,33 +7,19 @@
     "test": "echo \"hahahaa you fucking goof there are no tests psych 😘 love\""
   },
   "dependencies": {
-    "babel-loader": "6.2.4",
+    "babel": "6.5.2",
     "babel-plugin-transform-runtime": "6.8.0",
     "babel-preset-es2015": "6.6.0",
     "babel-preset-react": "6.5.0",
     "babel-preset-stage-2": "6.5.0",
     "babel-register": "6.8.0",
     "babel-runtime": "6.6.1",
-    "css-loader": "0.23.1",
-    "extract-text-webpack-plugin": "1.0.1",
-    "file-loader": "0.8.5",
-    "html-webpack-plugin": "2.15.0",
-    "immutable": "3.7.6",
-    "memory-fs": "0.3.0",
     "mkdirp": "0.5.1",
     "nodemon": "1.9.2",
-    "raw-loader": "0.5.1",
     "react": "15.1.0",
     "react-dom": "15.1.0",
-    "react-hot-loader": "1.3.0",
     "rimraf": "2.5.2",
-    "source-map-support": "0.4.0",
-    "style-loader": "0.13.1",
-    "url-loader": "0.5.7",
-    "webpack": "1.13.0",
-    "webpack-dev-middleware": "1.6.1",
-    "webpack-dev-server": "1.14.1",
-    "webpack-hot-middleware": "2.10.0",
-    "webpack-node-externals": "1.2.0"
+    "systemjs": "0.19.29",
+    "systemjs-plugin-babel": "0.0.11"
   }
 }
