--- a/package.json
+++ b/package.json
@@ -6,17 +6,15 @@
   "scripts": {
     "test": "echo \"hahahaa you fucking goof there are no tests psych 😘 love\""
   },
-  "dependencies": {
+  "devDependencies": {
     "babel": "6.5.2",
     "babel-plugin-transform-runtime": "6.8.0",
     "babel-preset-es2015": "6.6.0",
     "babel-preset-react": "6.5.0",
     "babel-preset-stage-2": "6.5.0",
-    "babel-register": "6.8.0",
-    "babel-runtime": "6.6.1"
+    "babel-register": "6.8.0"
   },
   "peerDependencies": {
-    "react": "15.1.0",
-    "react-dom": "15.1.0"
+    "react": ">=0.13.2 || ^0.14 || ^15.0.0"
   }
 }
