--- a/package.json
+++ b/package.json
@@ -4,15 +4,19 @@
   "version": "0.0.0",
   "author": "Brian Kim et al.",
   "scripts": {
-    "test": "echo \"hahahaa you fucking goof there are no tests psych 😘 love\""
+    "develop": "nodemon --exec ./manage.js src/react-walk.js",
+    "test": "echo \"hahahaa you fucking goof there are no tests psych 😘 love\"",
+    "prepublish": "mkdir -p dist && babel src/react-walk.js > dist/react-walk.js"
   },
+  "main": "dist/react-walk.js",
   "devDependencies": {
-    "babel": "6.5.2",
-    "babel-plugin-transform-runtime": "6.8.0",
-    "babel-preset-es2015": "6.6.0",
+    "babel-cli": "6.9.0",
+    "babel-plugin-transform-runtime": "6.9.0",
+    "babel-preset-es2015": "6.9.0",
     "babel-preset-react": "6.5.0",
     "babel-preset-stage-2": "6.5.0",
-    "babel-register": "6.8.0"
+    "babel-register": "6.8.0",
+    "nodemon": "1.9.2"
   },
   "peerDependencies": {
     "react": ">=0.13.2 || ^0.14 || ^15.0.0"
