--- a/package.json
+++ b/package.json
@@ -26,6 +26,6 @@
     "rimraf": "2.5.2"
   },
   "peerDependencies": {
-    "react": ">=0.13.2 || ^0.14 || ^15.0.0"
+    "react": "^0.14 || ^15"
   }
 }
